# DataEngineering_Copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_e2e.py
Rag_agent/dataStorage/: page_1_spark.apache.org_docs_latest_sql-getting-started.txt  page_2_spark.apache.org_docs_latest_sql-programming-guide.txt  page_3_docs.getdbt.com_reference_references-overview.txt  page_4_airflow.apache.org_docs_apache-airflow_stable_core-concepts_dags.txt
Rag_agent/services/: airflow_client.py  chat_memory.py  chat_service.py  data_loader.py  index.py  simple_agent.py  streamlit.py
Rag_agent/services/.ipynb_checkpoints/: chat_service-checkpoint.py
Rag_agent/services/storage/: chroma.sqlite3
app/: main.py
app/api/endpoints/: airflow.py  chat.py
dags/: mock_pipelines.py
data/: page_1_spark.apache.org_docs_latest_sql-getting-started.txt  page_2_spark.apache.org_docs_latest_sql-programming-guide.txt  page_3_airflow.apache.org_docs_apache-airflow_stable_core-concepts_dags.txt
datasight/: __init__.py
datasight/airflow_plugin/: __init__.py  plugin.py  views.py
datasight/analyzer/: __init__.py  code_analyzer.py  log_analyzer.py
datasight/api/: __init__.py
datasight/api/routes/: __init__.py
datasight/approval/: __init__.py  gateway.py  models.py
datasight/approval/channels/: __init__.py  github_pr.py  slack.py
datasight/git/: __init__.py  git_client.py
datasight/listener/: __init__.py  listener.py
datasight/llm/: __init__.py  engine.py
datasight/llm/providers/: __init__.py  ollama.py  openai.py
datasight/remediation/: __init__.py  patcher.py
datasight/ui/: __init__.py
storage/: chroma.sqlite3
tests/: test_approval.py  test_code_analyzer.py  test_listener.py  test_llm_engine.py  test_log_analyzer.py  test_patcher.py  test_settings.py
